--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         <section id="about" class="py-12 bg-gray-200">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-semibold mb-6 text-center">Sobre nós</h2>
-                <p class="text-gray-700 text-lg leading-relaxed">A Pizzaria Delícia tem como missão oferecer as melhores
+                <p class="text-gray-700 text-lg leading-relaxed">A Pizzaria Tech tem como missão oferecer as melhores
                     pizzas da cidade, feitas com ingredientes frescos e de qualidade.
                     Além das pizzas deliciosas, oferecemos uma variedade de bebidas refrescantes para complementar sua
                     refeição.</p>
