--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
     <footer class="bg-gray-800 text-white py-4">
         <div class="container mx-auto px-4">
-            <p class="text-center">© 2025 Pizzaria Tech - Desevolvido por Ângelo Silvano</p>
+            <p class="text-center">© 2025 Pizzaria Tech - Desenvolvido por Ângelo Silvano</p>
         </div>
     </footer>
 
