--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="flex justify-between items-center">
                 <h1 class="text-3xl font-bold">Pizzaria Tech</h1>
 
-                <!-- Botão do Menu Hamburger (Escondido em telas maiores) -->
+                <!-- Botão do Menu Hamburger -->
                 <button id="menu-toggle" class="lg:hidden focus:outline-none">
                     <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -204,6 +204,7 @@
                                     class="comprar-button block w-full bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-4 text-center">Comprar</button>
                             </div>
                         </div>
+
                         <!-- Bebida 7 -->
                         <div class="bg-white rounded-lg shadow-md overflow-hidden">
                             <img src="./image/guarana.jpg" alt="Refrigerante Guaraná Antarctica" class="w-full h-32 object-cover">
