--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
                         </div>
                     </div>
                 </section>
+                <div id="mensagem-carrinho" class="mt-4 text-center text-green-600 font-semibold"></div>
             </div>
         </section>
 
